# 8V42_Kiegechev_Programming_3sem_lab2

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
.github/worklflows/: release.yml
tests/: test_ip_filter.cpp
